--- a/_chapters/sc-1867-68-c-1.md
+++ b/_chapters/sc-1867-68-c-1.md
@@ -6,6 +6,7 @@ permalink: /en/statutes/sc/1867-68/c-1/index.html
 volume: S.C., 1867-68
 chapter: 1
 assenteddate: 21st December, 1867
+citeoldlong: 31 Victoria
 bill: No. 2
 ---
 <nav>
