--- a/_chapters/sc-1867-68-c-1.md
+++ b/_chapters/sc-1867-68-c-1.md
@@ -5,8 +5,9 @@ shorttitle: Interpretation Act
 permalink: /en/statutes/sc/1867-68/c-1/index.html
 volume: S.C., 1867-68
 chapter: 1
-assenteddate: 21st December, 1867
+assenteddate: 1867-12-21
 citeoldlong: 31 Victoria
+citeold: 31 V.
 bill: No. 2
 ---
 <nav>
