--- a/_sections/sc-1867-68-c-1-s-7.md
+++ b/_sections/sc-1867-68-c-1-s-7.md
@@ -15,235 +15,90 @@ Interpretation of certain words.
 <dl class="definition">
   <dt>
     <p class="marginal-note">
-      <dfn>
-        &ldquo;Her Majesty,&rdquo;
-      </dfn>
-      etc.
+      &ldquo;<dfn>Her Majesty</dfn>,&rdquo; etc.
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(1)">
-        (1)
-      </span>
-      The words
-      <span class="defined-term">
-        <dfn>
-          &ldquo;Her Majesty,&rdquo;
-        </dfn>
-      </span>
-      <span class="defined-term">
-        <dfn>
-          &ldquo;the Queen,&rdquo;
-        </dfn>
-      </span>
-      or
-      <span class="defined-term">
-        <dfn>
-          &ldquo;the Crown&rdquo;
-        </dfn>
-      </span>
-      shall mean&mdash;Her Majesty, Her Heirs and Successors, Sovereigns of the United Kingdom of Great Britain and Ireland;
+      <span class="law-label" id="s-7-(1)">(1)</span> The words &ldquo;<span class="defined-term"><dfn>Her Majesty</dfn></span>,&rdquo; &ldquo;<span class="defined-term"><dfn>the Queen</dfn></span>,&rdquo; or &ldquo;<span class="defined-term"><dfn>the Crown</dfn></span>&rdquo; shall mean Her Majesty, Her Heirs and Successors, Sovereigns of the United Kingdom of Great Britain and Ireland;
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      <dfn>
-        &ldquo;Governor,&rdquo;
-      </dfn>
-      etc.
+      &ldquo;<dfn>Governor</dfn>,&rdquo; etc.
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(2)">
-        (2)
-      </span>
-      The words
-      <span class="defined-term">
-        <dfn>
-          &ldquo;Governor,&rdquo;
-        </dfn>
-      </span>
-      <span class="defined-term">
-        <dfn>
-          &ldquo;Governor of Canada,&rdquo;
-        </dfn>
-      </span>
-      <span class="defined-term">
-        <dfn>
-          &ldquo;Governor General,&rdquo;
-        </dfn>
-      </span>
-      or
-      <span class="defined-term">
-        <dfn>
-          &ldquo;Governor in Chief&rdquo;
-        </dfn>
-      </span>
-      shall mean&mdash;the Governor General for the time being of Canada, or other the Chief Executive Officer or Administrator for the time being carrying on the Government of Canada, on behalf and in the name of the Queen by whatever title he is designated;
+      <span class="law-label" id="s-7-(2)">(2)</span> The words &ldquo;<span class="defined-term"><dfn>Governor</dfn></span>,&rdquo; &ldquo;<span class="defined-term"><dfn>Governor of Canada</dfn></span>,&rdquo; &ldquo;<span class="defined-term"><dfn>Governor General</dfn></span>,&rdquo; or &ldquo;<span class="defined-term"><dfn>Governor in Chief</dfn></span>&rdquo; shall mean the Governor General for the time being of Canada, or other the Chief Executive Officer or Administrator for the time being carrying on the Government of Canada, on behalf and in the name of the Queen by whatever title he is designated;
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      <dfn>
-        &ldquo;Governor in Council,&rdquo;
-      </dfn>
-      etc.
+      &ldquo;<dfn>Governor in Council</dfn>,&rdquo; etc.
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(3)">
-        (3)
-      </span>
-      The words
-      <span class="defined-term">
-        <dfn>
-          &ldquo;Governor in Council,&rdquo;
-        </dfn>
-      </span>
-      or
-      <span class="defined-term">
-        <dfn>
-          &ldquo;Governor General in Council&rdquo;
-        </dfn>
-      </span>
-      shall mean&mdash;the Governor General of Canada, or person administering the government of Canada for the time being, acting by and with the advice of, or by and with the advice and consent of, or in conjunction with, the Queen's Privy Council for Canada;
+      <span class="law-label" id="s-7-(3)">(3)</span> The words &ldquo;<span class="defined-term"><dfn>Governor in Council</dfn></span>,&rdquo; or &ldquo;<span class="defined-term"><dfn>Governor General in Council</dfn></span>&rdquo; shall mean the Governor General of Canada, or person administering the government of Canada for the time being, acting by and with the advice of, or by and with the advice and consent of, or in conjunction with, the Queen's Privy Council for Canada;
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      <dfn>
-        &ldquo;Lieutenant Governor,&rdquo;
-      </dfn>
-      etc.
+      &ldquo;<dfn>Lieutenant Governor</dfn>,&rdquo; etc.
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(4)">
-        (4)
-      </span>
-      The words
-      <span class="defined-term">
-        <dfn>
-          &ldquo;Lieutenant Governor,&rdquo;
-        </dfn>
-      </span>
-      shall mean the Lieutenant Governor for the time being, or other Chief Executive Officer or Administrator for the time being, carrying on the government of the province or provinces of the Dominion indicated by the Act, by whatever title he is designated.
+      <span class="law-label" id="s-7-(4)">(4)</span> The words &ldquo;<span class="defined-term"><dfn>Lieutenant Governor</dfn></span>,&rdquo; shall mean the Lieutenant Governor for the time being, or other Chief Executive Officer or Administrator for the time being, carrying on the government of the province or provinces of the Dominion indicated by the Act, by whatever title he is designated.
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      <dfn>
-        &ldquo;Lieutenant Governor in Council,&rdquo;
-      </dfn>
-      etc.
+      &ldquo;<dfn>Lieutenant Governor in Council</dfn>,&rdquo; etc.
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(5)">
-        (5)
-      </span>
-      The words
-      <span class="defined-term">
-        <dfn>
-          &ldquo;Lieutenant Governor in Council&rdquo;
-        </dfn>
-      </span>
-      shall mean the Lieutenant Governor or person administering the Government of the Province indicated by the Act, for the time being, acting by and with the advice of, or by and with the advice and consent of, or in conjunction with the Executive Council of the said province;
+      <span class="law-label" id="s-7-(5)">(5)</span> The words &ldquo;<span class="defined-term"><dfn>Lieutenant Governor in Council</dfn></span>&rdquo; shall mean the Lieutenant Governor or person administering the Government of the Province indicated by the Act, for the time being, acting by and with the advice of, or by and with the advice and consent of, or in conjunction with the Executive Council of the said province;
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      <dfn>
-        &ldquo;United Kingdom,&rdquo;
-      </dfn>
-      <dfn>
-        &ldquo;United States,&rdquo;
-      </dfn>
-      names of places, etc.
+      &ldquo;<dfn>United Kingdom</dfn>,&rdquo; &ldquo;<dfn>United States</dfn>,&rdquo; names of places, etc.
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(6)">
-        (6)
-      </span>
-      The words
-      <span class="defined-term">
-        <dfn>
-          &ldquo;the United Kingdom&rdquo;
-        </dfn>
-      </span>
-      shall mean the United Kingdom of Great Britain and Ireland;&mdash;and the words
-      <span class="defined-term">
-        <dfn>
-          &ldquo;the United States&rdquo;
-        </dfn>
-      </span>
-      shall mean the United States of America,&mdash;And generally, the name commonly applied to any country, place, body, corporation, society, officer, functionary, person, party, or thing, shall mean such country, place, body, corporation, society, officer, functionary, person, part, or thing, although such name is not the formal and extended designation thereof;
+      <span class="law-label" id="s-7-(6)">(6)</span> The words &ldquo;<span class="defined-term"><dfn>the United Kingdom</dfn></span>&rdquo; shall mean the United Kingdom of Great Britain and Ireland;&mdash;and the words &ldquo;<span class="defined-term"><dfn>the United States</dfn></span>&rdquo; shall mean the United States of America,&mdash;And generally, the name commonly applied to any country, place, body, corporation, society, officer, functionary, person, party, or thing, shall mean such country, place, body, corporation, society, officer, functionary, person, part, or thing, although such name is not the formal and extended designation thereof;
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      <dfn>
-        Proclamation.
-      </dfn>
+      &ldquo;<dfn>Proclamation</dfn>.&rdquo;
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(7)">
-        (7)
-      </span>
-      The word
-      <span class="defined-term">
-        <dfn>
-          &ldquo;proclamation&rdquo;
-        </dfn>
-      </span>
-      means a proclamation under the Great Seal, and the expression
-      <span class="defined-term">
-        <dfn>
-          &ldquo;Great Seal&rdquo;
-        </dfn>
-      </span>
-      means the Great Seal of Canada;
+      <span class="law-label" id="s-7-(7)">(7)</span> The word &ldquo;<span class="defined-term"><dfn>proclamation</dfn></span>&rdquo; means a proclamation under the Great Seal, and the expression &ldquo;<span class="defined-term"><dfn>Great Seal</dfn></span>&rdquo; means the Great Seal of Canada;
     </p>
   </dd>
 </dl>
-<p class="marginal-note">
-  Governor acting by proclamation.
-</p>
-<p class="subsection">
-  <span class="law-label" id="s-7-(8)">
-    (8)
-  </span>
-  When the Governor is authorized to do any Act by proclamation, such proclamation is understood to be a proclamation issued under an order of the Governor in Council, but it shall not be necessary that it be mentioned in the proclamation that it is issued under such order;
-</p>
+
+Governor acting by proclamation.
+{: .marginal-note}
+<span class="law-label" id="s-7-(8)">(8)</span> When the Governor is authorized to do any Act by proclamation, such proclamation is understood to be a proclamation issued under an order of the Governor in Council, but it shall not be necessary that it be mentioned in the proclamation that it is issued under such order;
+{: .subsection}
+
 <dl class="definition">
   <dt>
     <p class="marginal-note">
-      <dfn>
-        County.
-      </dfn>
+      &ldquo;<dfn>County</dfn>.&rdquo;
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(9)">
-        (9)
-      </span>
-      The word
-      <span class="defined-term">
-        <dfn>
-          &ldquo;county&rdquo;
-        </dfn>
-      </span>
-      includes two or more counties united for purposes to which the enactment relates;
+      <span class="law-label" id="s-7-(9)">(9)</span> The word &ldquo;<span class="defined-term"><dfn>county</dfn></span>&rdquo; includes two or more counties united for purposes to which the enactment relates;
     </p>
   </dd>
 </dl>
@@ -251,112 +106,124 @@ Interpretation of certain words.
   Number and gender.
 </p>
 <p class="subsection">
-  <span class="law-label" id="s-7-(10)">
-    (10)
-  </span>
-  Words importing the singular number or the masculine gender only shall include more persons, parties, or things of the same kind that one, and females as well as males, and the converse;
+  <span class="law-label" id="s-7-(10)">(10)</span> Words importing the singular number or the masculine gender only shall include more persons, parties, or things of the same kind that one, and females as well as males, and the converse;
 </p>
 <dl class="definition">
   <dt>
     <p class="marginal-note">
-      <dfn>
-        &ldquo;Person.&rdquo;
-      </dfn>
+      &ldquo;<dfn>Person</dfn>.&rdquo;
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(11)">
-        (11)
-      </span>
-      The word
-      <span class="defined-term">
-        <dfn>
-          &ldquo;person&rdquo;
-        </dfn>
-      </span>
-      shall include any body corporate and politic, or party, and the heirs, executors, administrators, or other legal representatives of such person, to whom the can apply according to the law of that part of Canada to which such context extends;
+      <span class="law-label" id="s-7-(11)">(11)</span> The word &ldquo;<span class="defined-term"><dfn>person</dfn></span>&rdquo; shall include any body corporate and politic, or party, and the heirs, executors, administrators, or other legal representatives of such person, to whom the can apply according to the law of that part of Canada to which such context extends;
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      <dfn>
-        &ldquo;Writing,&rdquo;
-      </dfn>
-      <dfn>
-        &ldquo;written.&rdquo;
-      </dfn>
+      &ldquo;<dfn>Writing</dfn>,&rdquo; &ldquo;<dfn>written</dfn>.&rdquo;
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(12)">
-        (12)
-      </span>
-      The words
-      <span class="defined-term">
-        <dfn>
-          &ldquo;writing,&rdquo;
-        </dfn>
-      </span>
-      <span class="defined-term">
-        <dfn>
-          &ldquo;written,&rdquo;
-        </dfn>
-      </span>
-      or any term of like import, shall include words printed, painted, engraved, lithographed, or otherwise traced or copied;
+      <span class="law-label" id="s-7-(12)">(12)</span> The words &ldquo;<span class="defined-term"><dfn>writing</dfn></span>,&rdquo; &ldquo;<span class="defined-term"><dfn>written</dfn></span>,&rdquo; or any term of like import, shall include words printed, painted, engraved, lithographed, or otherwise traced or copied;
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      <dfn>
-        &ldquo;Now&rdquo;
-      </dfn>
-      or
-      <dfn>
-        &ldquo;next.&rdquo;
-      </dfn>
+      &ldquo;<dfn>Now</dfn>&rdquo; or &ldquo;<dfn>next</dfn>.&rdquo;
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(13)">
-        (13)
-      </span>
-      The word
-      <span class="defined-term">
-        <dfn>
-          &ldquo;now&rdquo;
-        </dfn>
-      </span>
-      or
-      <span class="defined-term">
-        <dfn>
-          &ldquo;next&rdquo;
-        </dfn>
-      </span>
-      shall be construed as having reference to the time when the Act was presented for the royal assent;
+      <span class="law-label" id="s-7-(13)">(13)</span> The word &ldquo;<span class="defined-term"><dfn>now</dfn></span>&rdquo; or &ldquo;<span class="defined-term"><dfn>next</dfn></span>&rdquo; shall be construed as having reference to the time when the Act was presented for the royal assent;
     </p>
   </dd>
   <dt>
     <p class="marginal-note">
-      <dfn>
-        &ldquo;Month.&rdquo;
-      </dfn>
+      &ldquo;<dfn>Month</dfn>.&rdquo;
     </p>
   </dt>
   <dd>
     <p class="definition subsection">
-      <span class="law-label" id="s-7-(14)">
-        (14)
-      </span>
-      The word
-      <span class="defined-term">
-        <dfn>
-          &ldquo;month&rdquo;
-        </dfn>
-      </span>
-      shall mean a calendar month;
+      <span class="law-label" id="s-7-(14)">(14)</span> The word &ldquo;<span class="defined-term"><dfn>month</dfn></span>&rdquo; shall mean a calendar month;
+    </p>
+  </dd>
+  <dt>
+    <p class="marginal-note">
+      &ldquo;<dfn>Holiday</dfn>.&rdquo;
+    </p>
+  </dt>
+  <dd>
+    <p class="definition subsection">
+      <span class="law-label" id="s-7-(15)">(15)</span> The word &ldquo;<span class="defined-term"><dfn>holiday</dfn></span>&rdquo; shall include Sundays, New Year&rsquo;s Day, the Epiphany, the Annunciation, Good Friday, the Ascension, <i lang="la">Corpus Christi</i>, St. Peter and St. Paul&rsquo;s Day, All Saints&rsquo; Day, Conception Day, Easter Monday, Ash Wednesday, Christmas Day, the birthday of the reigning sovereign, and any day appointed by proclamation for a general fast or thanksgiving;
+    </p>
+  </dd>
+  <dt>
+    <p class="marginal-note">
+      &ldquo;<dfn>Oath</dfn>.&rdquo;<br />&ldquo;<dfn>Sworn</dfn>.&rdquo;<br />&ldquo;<dfn>Affirmed</dfn>.&rdquo;<br />Perjury.
+    </p>
+  </dt>
+  <dd>
+    <p class="definition subsection">
+      <span class="law-label" id="s-7-(16)">(16)</span> The word &ldquo;<span class="defined-term"><dfn>oath</dfn></span>&rdquo; shall be construed as meaning a solemn affirmation whenever the context applies to any person and case by whom and in which a solemn affirmation may be made instead of an oath, and in like cases the word &ldquo;<span class="defined-term"><dfn>sworn</dfn></span>&rdquo; shall include the word &ldquo;<span class="defined-term"><dfn>affirmed</dfn></span>&rdquo;:&mdash;And in every case where an oath or affirmation is directed to be made before any person or officer, such person or officer shall have full power and authority to administer the same and to certify its having been made;&mdash;And the willful making of any false statement in any such oath and affirmation shall be willful and corrupt perjury,&mdash;and the willful making of any false statement in any declaration required or authorized by any Act shall be a misdemeanor punishable as willful and corrupt perjury;
+    </p>
+  </dd>
+  <dt>
+    <p class="marginal-note">
+      &ldquo;<dfn>Sureties</dfn>.&rdquo;<br />&ldquo;<dfn>Security</dfn>.&rdquo;
+    </p>
+  </dt>
+  <dd>
+    <p class="defintion subsection">
+      <span class="law-label" id="s-7-(17)">(17)</span> The word &ldquo;<span class="defined-term"><dfn>sureties</dfn></span>&rdquo; shall mean sufficienty sureties, and the word &ldquo;<span class="defined-term"><dfn>security</dfn></span>&rdquo; shall mean sufficient security, and where these words are used, one person shall be sufficient therefor unless otherwise expressly required;
+    </p>
+  </dd>
+  <dt>
+    <p class="marginal-note">
+      &ldquo;<dfn>Superior courts</dfn>.&rdquo;
+    </p>
+  </dt>
+  <dd>
+    <p class="definition subsection">
+      <span class="law-label" id="s-7-(18)">(18)</span> The words &ldquo;<span class="defined-term"><dfn>superior courts</dfn></span>&rdquo; shall denote in the Province of Ontario, the Court of Queen&rsquo;s Bench, the Court of Common Pleas and the Court of Chancery in the said Province; in the Province of Quebec the said words shall denote the Court of Queen's Bench and the Superior Court in and for the said Province; and in the Provinces of Nova Scotia and New Brunswick the said words shall denote the Supreme Court in and for each of the said Provinces respectively;
+    </p>
+  </dd>
+  <dt>
+    <p class="marginal-note">
+      &ldquo;<dfn>Registrar</dfn>,&rdquo; &ldquo;<dfn>register</dfn>.&rdquo;
+    </p>
+  </dt>
+  <dd>
+    <p class="definition subsection">
+      <span clas="law-label" id="s-7-(19)">(19)</span> The words &ldquo;<span class="defined-term"><dfn>Registrar</dfn></span>&rdquo; or &ldquo;<span class="defined-term"><dfn>Register</dfn></span>&rdquo; in any Act, applying to the whole Dominion, shall mean and include indifferently Registrars and Registers in the several Provinces constituting the Dominion, and their Deputies, respectively;
     </p>
   </dd>
 </dl>
+
+Contravention of Acts.
+{: .marginal-note}
+<span>(20)</span>{:.law-label}{:#s-7-(20)} Any willful contravention of any Act, which is not made any offence of some other kind, shall be a misdemeanor, and punishable accordingly;
+{: .subsection}
+Punishement for contravention.
+{:.marginal-note}
+<span>(21)</span>{:.law-label}{:#s-7-(21)} Whenever any willful contravention of any Act is made an offence of any particular kind or name, the person guilty of such contravention shall, on conviction thereof, be punishable in the manner in which such offence is by law punishable;
+{:.subsection}
+Recovery of penalties when no other mode is prescribed.  
+Appropriation.
+{:.marginal-note}
+<span>(22)</span>{:.law-label}{:#s-7-(22)} Whenever any pecuniary penalty or any forfeiture is imposed for any contravention of any Act,---then, if no other mode be prescribed for the recovery thereof, such penalty or forfeiture shall be recoverable with costs by civil action or proceeding at the suit of the Crown only, or of any private party suing as well for the Crown as for himself,---in any form allowed in such case by the law of that Province where it is brought,---before any Court having jurisdiction to the amount of the penalty in cases of simple contract,---upon the evidence of any one credible witness other than the Plaintiff or party interested; And if no other provision be made for the appropriation of such penalty or forfeiture, one half thereof shall belong to the Crown, and the other half shall belong to the private plaintiff, if any there be, and if there be none, the whole shall belong to the Crown;
+{:.subsection}
+* [Con. Rev. Fund]: Consolidated Revenue Fund
+* 
+Crown's share when not otherwise appropriated to form part of Con. Rev. Fund.
+{:.marginal-note}
+<span>(23)</span>{:.law-label}{:#s-7-(23)} Any duty, penalty or suin of money, or the proceeds of any forfeiture, which is by any Act given to the Crown, shall, if no other provision be made respecting it, form part of the Consolidated Revenue Fund of Canada and be accounted for and otherwise dealt with accordingly;
+{:.subsection}
+
+"<dfn>Magistrate</dfn>."  
+"<dfn>Two justices</dfn>."  
+Power to do anything to include all necessary powers for doing it.
+{:.marginal-note}
+:<span>(24)</span>{:.law-label}{#s-7-(24)} The word "<span><dfn>Magistrate</dfn></span>{:.defined-term}" shall mean a Justice of the Peace;---the words "<span><dfn>two justices</dfn></span>{:.defined-term}," shall mean two or more Justices of the Peace, assembled or acting together;---And if any thing is directed to be done by or before a Magistrate or a Justice of the Peace, or other public functionary or officer, it shall be done by or before one whose jurisdiction or powers extend to the place where such thing is to be done:---And whenever power is given to any person, officer, or functionary to do or to enforce the doing of any act or thing, all such powers shall be understood to be also given as are necessary to enable such person, officer, or functionary to do or enforce the doing of such act or thing;
+{:.subsection}{:.definition}
