--- a/_sections/sc-1867-68-c-1-s-7.md
+++ b/_sections/sc-1867-68-c-1-s-7.md
@@ -7,6 +7,7 @@ chapter: 1
 section: 7
 permalink: /en/statutes/sc/1867-68/c-1/s-7.html
 ---
+* [Con. Rev. Fund]: Consolidated Revenue Fund
 Interpretation of certain words.
 {: .marginal-note}
 <span>7</span>{:#s-7 .section-label} Subject to the limitations aforesaid,---in every Act of the Parliament of Canada, to which this section applies:---
@@ -214,16 +215,13 @@ Appropriation.
 {:.marginal-note}
 <span>(22)</span>{:.law-label}{:#s-7-(22)} Whenever any pecuniary penalty or any forfeiture is imposed for any contravention of any Act,---then, if no other mode be prescribed for the recovery thereof, such penalty or forfeiture shall be recoverable with costs by civil action or proceeding at the suit of the Crown only, or of any private party suing as well for the Crown as for himself,---in any form allowed in such case by the law of that Province where it is brought,---before any Court having jurisdiction to the amount of the penalty in cases of simple contract,---upon the evidence of any one credible witness other than the Plaintiff or party interested; And if no other provision be made for the appropriation of such penalty or forfeiture, one half thereof shall belong to the Crown, and the other half shall belong to the private plaintiff, if any there be, and if there be none, the whole shall belong to the Crown;
 {:.subsection}
-* [Con. Rev. Fund]: Consolidated Revenue Fund
-* 
 Crown's share when not otherwise appropriated to form part of Con. Rev. Fund.
 {:.marginal-note}
-<span>(23)</span>{:.law-label}{:#s-7-(23)} Any duty, penalty or suin of money, or the proceeds of any forfeiture, which is by any Act given to the Crown, shall, if no other provision be made respecting it, form part of the Consolidated Revenue Fund of Canada and be accounted for and otherwise dealt with accordingly;
+<span>(23)</span>{:.law-label}{:#s-7-(23)} Any duty, penalty or sum of money, or the proceeds of any forfeiture, which is by any Act given to the Crown, shall, if no other provision be made respecting it, form part of the Consolidated Revenue Fund of Canada and be accounted for and otherwise dealt with accordingly;
 {:.subsection}
-
 "<dfn>Magistrate</dfn>."  
-"<dfn>Two justices</dfn>."  
+"<dfn>Two Justices</dfn>."  
 Power to do anything to include all necessary powers for doing it.
 {:.marginal-note}
-:<span>(24)</span>{:.law-label}{#s-7-(24)} The word "<span><dfn>Magistrate</dfn></span>{:.defined-term}" shall mean a Justice of the Peace;---the words "<span><dfn>two justices</dfn></span>{:.defined-term}," shall mean two or more Justices of the Peace, assembled or acting together;---And if any thing is directed to be done by or before a Magistrate or a Justice of the Peace, or other public functionary or officer, it shall be done by or before one whose jurisdiction or powers extend to the place where such thing is to be done:---And whenever power is given to any person, officer, or functionary to do or to enforce the doing of any act or thing, all such powers shall be understood to be also given as are necessary to enable such person, officer, or functionary to do or enforce the doing of such act or thing;
+: <span>(24)</span>{:.law-label}{#s-7-(24)} The word "<span><dfn>Magistrate</dfn></span>{:.defined-term}" shall mean a Justice of the Peace;---the words "<span><dfn>two Justices</dfn></span>{:.defined-term}," shall mean two or more Justices of the Peace, assembled or acting together;---And if any thing is directed to be done by or before a Magistrate or a Justice of the Peace, or other public functionary or officer, it shall be done by or before one whose jurisdiction or powers extend to the place where such thing is to be done:---And whenever power is given to any person, officer, or functionary to do or to enforce the doing of any act or thing, all such powers shall be understood to be also given as are necessary to enable such person, officer, or functionary to do or enforce the doing of such act or thing;
 {:.subsection}{:.definition}
