--- a/_sections/sc-1867-68-c-1-s-7.md
+++ b/_sections/sc-1867-68-c-1-s-7.md
@@ -9,6 +9,7 @@ permalink: /en/statutes/sc/1867-68/c-1/s-7.html
 ---
 *[Con. Rev. Fund]: Consolidated Revenue Fund
 Interpretation of certain words.
+
 {: .marginal-note}
 <span>7</span>{:#s-7 .section-label} Subject to the limitations aforesaid,---in every Act of the Parliament of Canada, to which this section applies:---
 {: .section}
@@ -192,7 +193,7 @@ Governor acting by proclamation.
   </dd>
   <dt>
     <p class="marginal-note">
-      &ldquo;<dfn>Registrar</dfn>,&rdquo; &ldquo;<dfn>register</dfn>.&rdquo;
+      &ldquo;<dfn>Registrar</dfn>,&rdquo; &ldquo;<dfn>Register</dfn>.&rdquo;
     </p>
   </dt>
   <dd>
@@ -219,10 +220,41 @@ Crown's share when not otherwise appropriated to form part of Con. Rev. Fund.
 {:.marginal-note}
 <span>(23)</span>{:.law-label}{:#s-7-(23)} Any duty, penalty or sum of money, or the proceeds of any forfeiture, which is by any Act given to the Crown, shall, if no other provision be made respecting it, form part of the Consolidated Revenue Fund of Canada and be accounted for and otherwise dealt with accordingly;
 {:.subsection}
-"<dfn>Magistrate</dfn>."  
-"<dfn>Two Justices</dfn>."  
-Power to do anything to include all necessary powers for doing it.
+Paying and accounting for moneys appropriated by statute.
 {:.marginal-note}
+<span>(24)</span>{:.law-label}{:#s-7-(24)} If any sum of the public money be by any Act appropriated for any purpose or directed to be paid by the Governor General,---then, if no other provision be made respecting it, such sum shall be payable under Warrant of the Governor General directed to the Receiver General, out of the Consolidated Revenue Fund of Canada; And all persons entrusted with the expenditure of any such sum or any part thereof shall account for the same in such manner and form, with such vouchers, at such periods and to such Officer, as the Governor General may direct;
+{:.subsection}
 
-: <span>(24)</span>{:.law-label}{#s-7-(24)} The word "<span><dfn>Magistrate</dfn></span>{:.defined-term}" shall mean a Justice of the Peace;---the words "<span><dfn>two Justices</dfn></span>{:.defined-term}," shall mean two or more Justices of the Peace, assembled or acting together;---And if any thing is directed to be done by or before a Magistrate or a Justice of the Peace, or other public functionary or officer, it shall be done by or before one whose jurisdiction or powers extend to the place where such thing is to be done:---And whenever power is given to any person, officer, or functionary to do or to enforce the doing of any act or thing, all such powers shall be understood to be also given as are necessary to enable such person, officer, or functionary to do or enforce the doing of such act or thing;
-{:.subsection}{:.definition}
+<dl class="definition">
+  <dt>
+    <p class="marginal-note">
+      &ldquo;<dfn>Magistrate</dfn>.&rdquo;<br />&ldquo;<dfn>Two Justices</dfn>.&rdquo;<br />Power to do anything to include all necessary powers for doing it.
+    </p>
+  </dt>
+  <dd>
+    <p class="subsection definition">
+      <span class="law-label" id="s-7-(25)">(25)</span> The word &ldquo;<span class="defined-term"><dfn>Magistrate</dfn></span>&rdquo; shall mean a Justice of the Peace;---the words &ldquo;<span class="defined-term"><dfn>two Justices</dfn></span>&rdquo; shall mean two or more Justices of the Peace, assembled or acting together;&mdash;And if any thing is directed to be done by or before a Magistrate or a Justice of the Peace, or other public functionary or officer, it shall be done by or before one whose jurisdiction or powers extend to the place where such thing is to be done;&mdash;And whenever power is given to any person, officer, or functionary to do or to enforce the doing of any act or thing, all such powers shall be understood to be also given as are necessary to enable such person, officer, or functionary to do or enforce the doing of such act or thing;
+    </p>
+  </dd>
+</dl>
+
+Imprisonment where to be, when no special place is mentioned.
+{:.marginal-note}
+<span>(26)</span>{:.law-label}{#s-7-(26)} If in any Act, any party is directed to be imprisoned or committed to prison, such imprisonment or committal shall, if no other place be mentioned or provided by law, be in or to the common jail of the locality in which the order for such imprisonment is made, or if there be no common jail there, then in or to that common jail which is nearest to such locality; and the keeper of any such common jail shall receive such person, and him safely keep and detain in such common jail under his custody until discharged in due course of Law, or bailed in cases in which bail may by Law be taken;
+{:.subsection}
+Words giving power to appoint include power to remove.
+{:.marginal-note}
+<span>(27)</span>{:.law-label}{#s-7-(27)} Words authorizing the appointment of any public officer or functionary, or any deputy, shall include the power of removing him, re-appointing him or appointing another in his stead, in the discretion of the authority in whom the power of appointment is vested;
+{:.subsection}
+Directions to public officer, to apply to his succesors and his Deputy.
+{:.marginal-note}
+<span>(28)</span>{:.law-label}{#s-7-(28)} Words directing or empowering a public officer or functionary to do any act or thing, or otherwise applying to him by his name of office, shall include his successors in such office, and his or their lawful Deputy;
+{:.subsection}
+Appointments by Governor to be during pleasure.
+{:.marginal-note}
+<span>(29)</span>{:.law-label}{#s-7-(29)} All officers now appointed or hereafter to be appointed by the Governor General whether by Commission or otherwise shall remain in office during pleasure only, unless otherwise expressed in their Commissions or appointments.
+{:.subsection}
+Words constituting a corporation to vest certain powers in it.
+{:.marginal-note}
+<span>(30)</span>{:.law-label}{#s-7-(30)} Words making any association or number of persons a corporation or body politic and corporate, shall vest in such corporation, power to sue and be sued, contract and be contracted with, by their corporate name, to have a common seal, and to alter or change the same at their pleasure, and to have perpetual succession, and power to acquire and hold personal property or moveables for the purposes for which the corporation is constituted, and to alienate the same at pleasure; and shall also vest in any majority of the members of the corporation the power to bind the others by their acts; and shall exempt the individual members of the corporation from personal liability for its debts or obligations or acts, provided they do not contravene the provisions of the Act incorporating them;---But no corporation shall carry on the business of banking unless when such power is expressly conferred on them by the Act creating such corporation;
+{:.subsection}
