--- a/_sections/sc-1867-68-c-1-s-7.md
+++ b/_sections/sc-1867-68-c-1-s-7.md
@@ -240,21 +240,21 @@ Paying and accounting for moneys appropriated by statute.
 
 Imprisonment where to be, when no special place is mentioned.
 {:.marginal-note}
-<span>(26)</span>{:.law-label}{#s-7-(26)} If in any Act, any party is directed to be imprisoned or committed to prison, such imprisonment or committal shall, if no other place be mentioned or provided by law, be in or to the common jail of the locality in which the order for such imprisonment is made, or if there be no common jail there, then in or to that common jail which is nearest to such locality; and the keeper of any such common jail shall receive such person, and him safely keep and detain in such common jail under his custody until discharged in due course of Law, or bailed in cases in which bail may by Law be taken;
+<span>(26)</span>{:.law-label}{:#s-7-(26)} If in any Act, any party is directed to be imprisoned or committed to prison, such imprisonment or committal shall, if no other place be mentioned or provided by law, be in or to the common jail of the locality in which the order for such imprisonment is made, or if there be no common jail there, then in or to that common jail which is nearest to such locality; and the keeper of any such common jail shall receive such person, and him safely keep and detain in such common jail under his custody until discharged in due course of Law, or bailed in cases in which bail may by Law be taken;
 {:.subsection}
 Words giving power to appoint include power to remove.
 {:.marginal-note}
-<span>(27)</span>{:.law-label}{#s-7-(27)} Words authorizing the appointment of any public officer or functionary, or any deputy, shall include the power of removing him, re-appointing him or appointing another in his stead, in the discretion of the authority in whom the power of appointment is vested;
+<span>(27)</span>{:.law-label}{:#s-7-(27)} Words authorizing the appointment of any public officer or functionary, or any deputy, shall include the power of removing him, re-appointing him or appointing another in his stead, in the discretion of the authority in whom the power of appointment is vested;
 {:.subsection}
 Directions to public officer, to apply to his succesors and his Deputy.
 {:.marginal-note}
-<span>(28)</span>{:.law-label}{#s-7-(28)} Words directing or empowering a public officer or functionary to do any act or thing, or otherwise applying to him by his name of office, shall include his successors in such office, and his or their lawful Deputy;
+<span>(28)</span>{:.law-label}{:#s-7-(28)} Words directing or empowering a public officer or functionary to do any act or thing, or otherwise applying to him by his name of office, shall include his successors in such office, and his or their lawful Deputy;
 {:.subsection}
 Appointments by Governor to be during pleasure.
 {:.marginal-note}
-<span>(29)</span>{:.law-label}{#s-7-(29)} All officers now appointed or hereafter to be appointed by the Governor General whether by Commission or otherwise shall remain in office during pleasure only, unless otherwise expressed in their Commissions or appointments.
+<span>(29)</span>{:.law-label}{:#s-7-(29)} All officers now appointed or hereafter to be appointed by the Governor General whether by Commission or otherwise shall remain in office during pleasure only, unless otherwise expressed in their Commissions or appointments.
 {:.subsection}
 Words constituting a corporation to vest certain powers in it.
 {:.marginal-note}
-<span>(30)</span>{:.law-label}{#s-7-(30)} Words making any association or number of persons a corporation or body politic and corporate, shall vest in such corporation, power to sue and be sued, contract and be contracted with, by their corporate name, to have a common seal, and to alter or change the same at their pleasure, and to have perpetual succession, and power to acquire and hold personal property or moveables for the purposes for which the corporation is constituted, and to alienate the same at pleasure; and shall also vest in any majority of the members of the corporation the power to bind the others by their acts; and shall exempt the individual members of the corporation from personal liability for its debts or obligations or acts, provided they do not contravene the provisions of the Act incorporating them;---But no corporation shall carry on the business of banking unless when such power is expressly conferred on them by the Act creating such corporation;
+<span>(30)</span>{:.law-label}{:#s-7-(30)} Words making any association or number of persons a corporation or body politic and corporate, shall vest in such corporation, power to sue and be sued, contract and be contracted with, by their corporate name, to have a common seal, and to alter or change the same at their pleasure, and to have perpetual succession, and power to acquire and hold personal property or moveables for the purposes for which the corporation is constituted, and to alienate the same at pleasure; and shall also vest in any majority of the members of the corporation the power to bind the others by their acts; and shall exempt the individual members of the corporation from personal liability for its debts or obligations or acts, provided they do not contravene the provisions of the Act incorporating them;---But no corporation shall carry on the business of banking unless when such power is expressly conferred on them by the Act creating such corporation;
 {:.subsection}
